# GraphicsCourse

assets/: simple-shader.fs
hw01/: CMakeLists.txt  README.md  main.cpp
hw02/: CMakeLists.txt  main.cpp  obj_model.cpp  obj_model.h
hw02/assets/: model.fs  model.vs
hw03/: CMakeLists.txt  build.bat  build.sh  car.h  conanfile.txt  main.cpp  obj_model.cpp  obj_model.h  opengl_shader.cpp  opengl_shader.h  skybox.h  torus.h  utils.h
hw03/assets/: model.fs  model.vs  torus.fs  torus.vs
